[package]
name = "twotw"
version = "0.1.0"
authors = ["Ahmed Nasser <ahmednasser321432@gmail.com>"]
edition = "2018"

[dependencies]
tcod = { version = "0.15", features = ["serialization"] }
rodio = "0.9.0"
rand = "0.3.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.tcod-sys]
version = "*"
features = ["dynlib"]
